Fixed gallery on mobile

--- a/src/style.styl
+++ b/src/style.styl
@@ -375,15 +375,11 @@ nav.more
 .gallery
   margin-left: calc(50% - 50vw)
   margin-right: calc(50% - 50vw)
-  display: flex
-  flex-direction: row
-  flex-wrap: wrap
-  align-items: center
-  justify-content: center
+  text-align: center
   img
-    flex: 1 1 50%
-    margin: base-chars(1)
-    max-width: 500px
+    margin: base-chars(1) 0
+    width: 500px
+    max-width: 100%
     max-height: 500px
     background-color: rgba(255, 255, 255, 0.8)
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.30)
@@ -433,6 +429,16 @@ ul.coordinates
     width: 80%
 
 @media (min-width: ($body-text-width + base-chars(16)))
+  .gallery
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    align-items: center
+    justify-content: center
+    img
+      flex: 1 1 50%
+      margin: base-chars(1)
+      max-width: 500px
   #footer
     margin: 0 auto
     padding: 0 base-chars(8) base-lines(1)
